css/home.css
/* Add a black background color to the top navigation */
@import url('https://fonts.googleapis.com/css?family=Kanit');
body
{
    margin:0;
}
*{
    font-family: 'Kanit', sans-serif;
    transition: 0.5s all;
    margin:0;
    padding: 0;
}
.bg{
    background: linear-gradient(335deg,#478ef6,#aac8f5);
    display: block;
    width: 100vw;
    height: 400px;
}

#logo{
    display:block;
    margin:4% auto 0%;
    width: 300px;
}
#logoS{
    display:block;
    width: 300px;
   margin:0 auto 0; /* Will not center vertically and won't work in IE6/7. */
}
.topnav {
    margin:0;
    overflow: hidden;
}

/* Style the links inside the navigation bar */

.topnav a {

    float: right;
    display: block;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
    font-size: 17px;
    color: #b6fbff;
}

/* Change the color of links on hover */
.topnav a:hover {
    color: black;
}

/* Hide the link that should open and close the topnav on small screens */
.topnav .icon {
    display: none;
}
/*main box*/
.main{
    width: 100vw;
    height: 200px;
    display: block;
    }

#left-box{
    padding-top:3%; 
    background: #f4f4f4;
    width: 60%;
    position: relative;
    display: block;
    height: 100%;
    float: left;
}

#right-box{
    background: #eafb0a;
    width: 40%;
    position: relative;
    display: block;
    height: 100%;
    float: left;
}
/*End*/

#title{
    display: block;
    font-size: 4em;
    color: #478ef6;
    margin-left: 3%;
    margin-bottom:0px: 
}
#sub{
    display: block;
    font-size: 2em;
    color: black;
    margin-left: 3%;
}
#splash{
    width: 100%;
}
@media only screen and (max-width: 640px) {
    #title{
    margin-left: 5%;
    display: block;
    font-size: 3em;
    margin-left: 3%;
}
    #sub{
    margin-left: 5%;
    display: block;
    font-size: 1em;
    margin-left: 3%;
}
    #left-box
    {
        float: none;
        width: 100%;
    }
    #right-box
    {
        float: none;
        width: 100%;
    }
    .title{
    font-size: 1.5em;
}
    #logo{
        padding: 120px 0 0;
    }
    .topnav {
  background-color: #333;
  position: fixed;
  width: 100%;
  top: 0;
}
.topnav a:hover {
    background-color: #ddd;
    color: black;
}
  .topnav a:not(:first-child) {display: none;}
  .topnav a.icon {
    float: left;
    display: block;
  }
}

@media only screen and (max-width: 640px) {
  .topnav.responsive .icon {
    position: absolute;
    left: 0;
    top: 0;
  }
  .topnav.responsive a {
    float: none;
    display: block;
    text-align: right;
  }

}

